--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
@@ -3,8 +3,10 @@
 #    - className: "org.wso2.carbon.uuf.sample.pets-store.PetsStoreMicroservice"
 #      uri: "/pets/"
 apis:
-  - className: "org.wso2.is.portal.user.client.api.ProfileImageDownloaderService"
+  - className: "org.wso2.is.portal.user.client.api.micro.ProfileImageDownloaderService"
     uri: "/profile-image-service/"
+  - className: "org.wso2.is.portal.user.client.api.micro.IdentityStoreClientMicroService"
+    uri: "/identityStore-micro-service/"
 
 # Binding fragments into zones.
 # Modes:
