--- a/product/carbon-home/conf/identity/challenge-questions/en-US.yaml
+++ b/product/carbon-home/conf/identity/challenge-questions/en-US.yaml
@@ -1,5 +1,5 @@
 ###############################################################################
-#   Copyright (c) 2016, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+#   Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
@@ -20,32 +20,32 @@ challengeQuestions:
   -
     question: "City where you were born ?"
     questionId: 1
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Father's middle name ?"
     questionId: 2
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Favorite food ?"
     questionId: 3
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Favorite vacation location ?"
     questionId: 4
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Model of your first car ?"
     questionId: 5
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
   -
     question: "Name of the hospital where you were born ?"
     questionId: 6
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
   -
     question: "Name of your first pet ?"
     questionId: 7
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
   -
     question: "Favorite sport ?"
     questionId: 8
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
