--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -100,7 +100,8 @@
                         <configuration>
                             <instructions>
                                 <Import-Package>
-                                    org.wso2.is.portal.user.client.api.*,
+                                    org.wso2.is.portal.user.client.api,
+                                    org.wso2.is.portal.user.client.api.micro,
                                     org.wso2.carbon.identity.recovery.*
                                 </Import-Package>
                             </instructions>
