--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -102,6 +102,7 @@
                                 <Import-Package>
                                     org.wso2.is.portal.user.client.api,
                                     org.wso2.is.portal.user.client.api.micro,
+                                    org.wso2.is.portal.user.client.api.bean,
                                     org.wso2.carbon.identity.recovery.*
                                 </Import-Package>
                             </instructions>
