IDENTITY-5713 fix Wrong error messages are throwing when add two words for Name fields

--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -38,13 +38,13 @@ profiles:
    displayName: "First Name"
    required: true
    readonly: false
-   regex: "^[a-zA-Z]*$"
+   regex: "^[a-zA-Z]+( [a-zA-Z]+)*$"
   -
    claimURI: "http://wso2.org/claims/lastname"
    displayName: "Last Name"
    required: false
    readonly: false
-   regex: "^[a-zA-Z]*$"
+   regex: "^[a-zA-Z]+( [a-zA-Z]+)*$"
   -
    claimURI: "http://wso2.org/claims/email"
    displayName: "Email"
