Update idp tmp file

--- a/product/carbon-home/deployment/identityprovider/myidp.yaml
+++ b/product/carbon-home/deployment/identityprovider/myidp.yaml
@@ -11,7 +11,11 @@ identityProviderConfig:
     federationHub : "false"
     homeRealm : "false"
 
-    roleConfiguration :
+    claimConfig:
+       profile : "sdsd"
+       dialectUri : "dfdf"
+
+    roleConfig :
       roleMappings :
         -
           localRoleName : "admin"
