--- a/product/pom.xml
+++ b/product/pom.xml
@@ -142,6 +142,16 @@
             <artifactId>org.wso2.carbon.iam.user-portal.feature</artifactId>
             <type>zip</type>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.event.handler.notification</groupId>
+            <artifactId>org.wso2.carbon.email.mgt.server.feature</artifactId>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.event.handler.notification</groupId>
+            <artifactId>org.wso2.carbon.event.handler.notification.server.feature</artifactId>
+            <type>zip</type>
+        </dependency>
         <!-- UUF Dependencies-->
         <dependency>
             <groupId>org.wso2.carbon.uuf</groupId>
@@ -435,6 +445,14 @@
                                     <!--<id>org.wso2.carbon.uuf.sample.pets-store.feature</id>-->
                                     <!--<version>${carbon.uuf.version}</version>-->
                                 <!--</feature>-->
+                                <feature>
+                                    <id>org.wso2.carbon.email.mgt.server.feature</id>
+                                    <version>${org.wso2.carbon.identity.event.handler.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.event.handler.notification.server.feature</id>
+                                    <version>${org.wso2.carbon.identity.event.handler.version}</version>
+                                </feature>
                             </features>
                         </configuration>
                     </execution>
@@ -599,6 +617,14 @@
                                     <!--<id>org.wso2.carbon.uuf.sample.pets-store.feature</id>-->
                                     <!--<version>${carbon.uuf.version}</version>-->
                                 <!--</feature>-->
+                                <feature>
+                                    <id>org.wso2.carbon.email.mgt.server.feature</id>
+                                    <version>${org.wso2.carbon.identity.event.handler.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.event.handler.notification.server.feature</id>
+                                    <version>${org.wso2.carbon.identity.event.handler.version}</version>
+                                </feature>
                             </features>
                         </configuration>
                     </execution>
