--- a/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/challenge-questions/en_US.yaml
+++ b/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/challenge-questions/en_US.yaml
@@ -20,32 +20,37 @@ challengeQuestions:
   -
     question: "City where you were born ?"
     questionId: 1
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Father's middle name ?"
     questionId: 2
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Favorite food ?"
     questionId: 3
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Favorite vacation location ?"
     questionId: 4
-    questionSetId: 1
+    questionSetId: "http://wso2.org/claims/challengeQuestion1"
   -
     question: "Model of your first car ?"
     questionId: 5
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
   -
     question: "Name of the hospital where you were born ?"
     questionId: 6
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
   -
     question: "Name of your first pet ?"
     questionId: 7
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
   -
     question: "Favorite sport ?"
     questionId: 8
-    questionSetId: 2
+    questionSetId: "http://wso2.org/claims/challengeQuestion2"
+
+  -
+    question: "Favorite Movie ?"
+    questionId: 9
+    questionSetId: "http://wso2.org/claims/challengeQuestion3"
