Implementation of Username Recovery feature. (#1130)
* Username recovery working feature

* Implementation of username recovery feature

* Resolved conflicts to build with master

* Resolve conflicts with master

* Resolved conflicts

* Resolved PR comments

* Resolved PR comments

* Resolved PR Comments

* Resolved PR Comments

* Resolved PR Comments

--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -124,3 +124,28 @@ profiles:
    dataType: "email"
    regex: "*"
    defaultValue: "user@example.com"
+ -
+  profileName: "username-recovery"
+  isAdminProfile: true
+  claims:
+  -
+   claimURI: "http://wso2.org/claims/givenname"
+   displayName: "First Name"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "text"
+  -
+   claimURI: "http://wso2.org/claims/lastname"
+   displayName: "Last Name"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "text"
+  -
+   claimURI: "http://wso2.org/claims/email"
+   displayName: "Email"
+   required: true
+   readonly: false
+   regex: "*"
+   dataType: "email"
