--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -59,6 +59,12 @@
             <groupId>org.wso2.carbon.identity.mgt</groupId>
             <artifactId>org.wso2.carbon.identity.recovery</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>2.40.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
