--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>osgi-tests</module>
 	    <module>ui-tests</module>
+        <module>commons</module>
     </modules>
 
 </project>
