--- a/tests/commons/pom.xml
+++ b/tests/commons/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>user-portal-tests</artifactId>
+        <groupId>org.wso2.is</groupId>
+        <version>6.0.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>org.wso2.is</groupId>
     <artifactId>commons</artifactId>
     <version>6.0.0-SNAPSHOT</version>
