--- a/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/domain-config.yaml
+++ b/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/domain-config.yaml
@@ -132,6 +132,12 @@ domains:
       -
         attribute: "challengeQuestion3"
         claimUri: "http://wso2.org/claims/challengeQuestion3"
+      -
+        attribute: "accountLock"
+        claimUri: "http://wso2.org/claims/identity/accountLocked"
+      -
+        attribute: "accountDisable"
+        claimUri: "http://wso2.org/claims/identity/accountDisabled"
 
     credentialStoreConnectors:
     -
