handle account lock/disable state at question based password recovery

--- a/product/carbon-home/conf/identity/challenge-questions/en_US.yaml
+++ b/product/carbon-home/conf/identity/challenge-questions/en_US.yaml
@@ -49,3 +49,8 @@ challengeQuestions:
     question: "Favorite sport ?"
     questionId: 8
     questionSetId: "http://wso2.org/claims/challengeQuestion2"
+
+  -
+    question: "Favorite Movie ?"
+    questionId: 9
+    questionSetId: "http://wso2.org/claims/challengeQuestion3"
