--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,31 @@
                 <type>zip</type>
             </dependency>
             <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.feature</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.gateway</groupId>
+                <artifactId>org.wso2.carbon.identity.gateway.resource.feature</artifactId>
+                <version>${carbon.identity.gateway.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.inbound.auth.saml2</groupId>
+                <artifactId>org.wso2.carbon.identity.sso.saml.server.feature</artifactId>
+                <version>${carbon.identity.saml.inbound.version}</version>
+                <type>zip</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.authenticator.outbound.saml2sso</groupId>
+                <artifactId>org.wso2.carbon.identity.application.authenticator.samlsso.server.feature</artifactId>
+                <version>${carbon.identity.saml.outbound.version}</version>
+                <type>zip</type>
+            </dependency>
+
+            <dependency>
                 <groupId>org.wso2.is</groupId>
                 <artifactId>org.wso2.is.portal.user.client.api</artifactId>
                 <version>${carbon.is.version}</version>
@@ -826,6 +851,9 @@
         <org.wso2.carbon.identity.recovery.server.feature.version>0.1.22</org.wso2.carbon.identity.recovery.server.feature.version>
         <org.wso2.carbon.identity.commons.feature.version>0.1.20</org.wso2.carbon.identity.commons.feature.version>
         <org.wso2.carbon.identity.commons.version>0.1.20</org.wso2.carbon.identity.commons.version>
+        <carbon.identity.gateway.version>1.0.0-SNAPSHOT</carbon.identity.gateway.version>
+        <carbon.identity.saml.inbound.version>6.0.0-SNAPSHOT</carbon.identity.saml.inbound.version>
+        <carbon.identity.saml.outbound.version>6.0.0-SNAPSHOT</carbon.identity.saml.outbound.version>
 
         <carbon.uuf.version>1.0.0-m12</carbon.uuf.version>
         <carbon-uuf-maven-plugin.version>1.0.0-m11</carbon-uuf-maven-plugin.version>
