--- a/tests/ui-tests/user-portal/pom.xml
+++ b/tests/ui-tests/user-portal/pom.xml
@@ -41,52 +41,32 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.3.1</version>
+            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.is</groupId>
             <artifactId>org.wso2.carbon.iam.user-portal.feature</artifactId>
-            <version>6.0.0-SNAPSHOT</version>
+            <version>${carbon.is.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
-            <version>2.40.0</version>
+            <version>${org.seleniumhq.selenium.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-htmlunit-driver</artifactId>
-            <version>2.40.0</version>
+            <version>${org.seleniumhq.selenium.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-dependency-plugin</artifactId>-->
-            <!--<executions>-->
-
-            <!--<execution>-->
-            <!--<id>copy-jacoco-dependencies</id>-->
-            <!--<phase>compile</phase>-->
-            <!--<goals>-->
-            <!--<goal>copy-dependencies</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
-            <!--<includeTypes>jar</includeTypes>-->
-            <!--<includeArtifactIds>org.jacoco.ant</includeArtifactIds>-->
-            <!--<stripVersion>true</stripVersion>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -107,59 +87,4 @@
             </plugin>
         </plugins>
     </build>
-
-
-    <!--<profiles>-->
-    <!--<profile>-->
-    <!--<id>with-tests</id>-->
-    <!--<activation>-->
-    <!--<property>-->
-    <!--<name>!maven.test.skip</name>-->
-    <!--</property>-->
-    <!--</activation>-->
-    <!--<build>-->
-    <!--<plugins>-->
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-dependency-plugin</artifactId>-->
-    <!--<executions>-->
-
-    <!--<execution>-->
-    <!--<id>copy-jacoco-dependencies</id>-->
-    <!--<phase>compile</phase>-->
-    <!--<goals>-->
-    <!--<goal>copy-dependencies</goal>-->
-    <!--</goals>-->
-    <!--<configuration>-->
-    <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
-    <!--<includeTypes>jar</includeTypes>-->
-    <!--<includeArtifactIds>org.jacoco.ant</includeArtifactIds>-->
-    <!--<stripVersion>true</stripVersion>-->
-    <!--</configuration>-->
-    <!--</execution>-->
-    <!--</executions>-->
-    <!--</plugin>-->
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-compiler-plugin</artifactId>-->
-    <!--<configuration>-->
-    <!--<source>1.8</source>-->
-    <!--<target>1.8</target>-->
-    <!--</configuration>-->
-    <!--</plugin>-->
-
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-surefire-plugin</artifactId>-->
-    <!--<configuration>-->
-    <!--<suiteXmlFiles>-->
-    <!--<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
-    <!--</suiteXmlFiles>-->
-    <!--</configuration>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
-    <!--</build>-->
-    <!--</profile>-->
-    <!--</profiles>-->
-
 </project>
