--- a/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/identity-event.properties
+++ b/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/identity-event.properties
@@ -19,11 +19,12 @@
 threadPool.size = 10
 
 module.name.1=account.lock.handler
-account.lock.handler.subscription.1=PRE_AUTHENTICATION
-account.lock.handler.subscription.2=POST_AUTHENTICATION
-account.lock.handler.subscription.3=PRE_SET_USER_CLAIMS
-account.lock.handler.subscription.4=POST_SET_USER_CLAIMS
-account.lock.handler.enable=false
-account.lock.handler.login.fail.timeout.ratio=2
-account.lock.handler.On.Failure.Max.Attempts=5
-account.lock.handler.Time=5
+account.lock.handler.subscription.1=PRE_AUTHENTICATE
+account.lock.handler.subscription.2=POST_AUTHENTICATE
+account.lock.handler.subscription.3=PRE_UPDATE_USER_CLAIMS_PUT
+account.lock.handler.subscription.4=PRE_UPDATE_USER_CLAIMS_PATCH
+account.lock.handler.subscription.5=POST_UPDATE_USER_CLAIMS_PUT
+account.lock.handler.subscription.6=POST_UPDATE_USER_CLAIMS_PATCH
+module.name.2=emailSend
+emailSend.subscription.1=TRIGGER_NOTIFICATION
+
