--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,18 @@
                 <artifactId>xalan</artifactId>
                 <version>${xalan.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-api</artifactId>
+                <version>${org.seleniumhq.selenium.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-htmlunit-driver</artifactId>
+                <version>${org.seleniumhq.selenium.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <!-- Other Dependencies-->
             <dependency>
