--- a/tests/ui-tests/pom.xml
+++ b/tests/ui-tests/pom.xml
@@ -24,6 +24,7 @@
         <artifactId>user-portal-tests</artifactId>
         <groupId>org.wso2.is</groupId>
         <version>6.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
